--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,8 @@ body{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2vw;
-  padding: 1vw 5vw;
+  padding: 1vh 5vw;
+  padding-bottom: 10vh;
   margin: 0 auto;
 }
 
@@ -163,7 +164,7 @@ body{
 
 .card {
   width: 65vw;
-  height: 85vh;
+  height: fit-content;
   background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
   border-radius: 20px;
   transition: all 0.3s;
@@ -186,7 +187,53 @@ body{
   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.3);
 }
 
-@media screen and (max-width: 1400px) {
+.socials ul{
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.socials ul li{
+  list-style-type: none;
+  margin: 0 15px;
+}
+
+.socials ul li a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  background-color: #000;
+  box-shadow: 0 05px 4px rgba(0, 0, 0, 0.3);
+}
+
+.socials ul li .fab:hover{
+  color: #fff;
+}
+.socials ul li a:hover{
+  transform: translate(0, -15%);
+  transition: 0.5s;
+}
+
+.socials ul li:nth-child(1) a:hover{
+  background-color: #E1306C;
+}
+.socials ul li:nth-child(2) a:hover{
+  background-color: #0A66C2;
+}
+.socials ul li:nth-child(3) a:hover{
+  background-color: #000000;
+}
+
+@media screen and (max-width: 1424px) {
+  .header{
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+  } 
+
   .languages{
     display: flex;
     flex-direction: column;
@@ -207,20 +254,12 @@ body{
   .card{
     height: fit-content;
     margin-bottom: 10vh;
-  }
-}
+    width: 80vw;
 
-@media screen and (max-width: 1010px) {
-  .header{
-    flex-direction: column;
   }
 
   .title{
     text-align: center;
-  }
-
-  .card{
-    width: 80vw;
   }
 
   .header{
